--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -1,7 +1,39 @@
 @Article{wikipediaHubble,
-	journal = {Hubbleův vesmírný dalekohled},
+	journal = {Wikipedia: Hubbleův vesmírný dalekohled},
 	url = {http://cs.wikipedia.org/wiki/Hubble\%C5\%AFv\_vesm\%C3\%ADrn\%C3\%BD\_dalekohled},
 	note = {[online]. 2015 [cit. 2015-04-02]}
+}
+
+@Article{wikipediaWebbEn,
+        journal = {Wikipedia: James Webb Space Telescope},
+        url = {http://en.wikipedia.org/wiki/James\_Webb\_Space\_Telescope},
+        note = {[online]. 2015 [cit. 2015-04-05]}
+}
+
+@Article{lagrange,
+        journal = {Wikipedia: Librační centrum},
+        url = {http://cs.wikipedia.org/wiki/Librační\_centrum},
+        note = {[online]. 2015 [cit. 2015-04-05]}
+}
+
+@Article{wikipediaAnastigmat,
+        journal = {Wikipedia: Three-mirror anastigmat},
+        url = {http://en.wikipedia.org/wiki/Three-mirror\_anastigmat},
+        note = {[online]. 2015 [cit. 2015-04-06]}
+}
+
+@Article{osel,
+	author = {Jan Bílek},
+        journal = {Objective Source E-Learning},
+        url = {http://www.osel.cz/index.php?clanek=7531},
+        note = {[online]. 2014-03-26 [cit. 2015-04-05]}
+}
+
+@Article{abcko,
+        author = {Petr Kubala},
+        journal = {ABC: Vesmírný náhradník - Kosmický dalekohled Jamese Webba},
+        url = {http://www.abicko.cz/precti-si-technika/13914/vesmirny-nahradnik-kosmicky-dalekohled-jamese-webba.html},
+        note = {[online]. 2013-03-26 [cit. 2015-04-06]}
 }
 
 @Article{nasaHubbleChronology,
@@ -17,36 +49,10 @@
 	note = {[online]. 2015 [cit. 2015-04-03]}
 }
 
-@Article{hubbleSiteServicingMissions,
-	journal = {Servicing Missions},
-	url = {http://hubblesite.org/the\_telescope/team\_hubble/servicing\_missions.php},
-	note = {[online]. 2015 [cit. 2015-04-03]}
-}
-
-@Article{hubbleUntil2018,
-	journal = {Hubble Space Telescope Could Last Until 2018, NASA Says},
-	url = {http://www.space.com/19189-hubble-space-telescope-lifetime-2018.html},
-	note = {[online]. 2015 [cit. 2015-04-03]}
-}
-
-@Article{nasaHubbleAccomplishments,
-	journal = {Hubble Accomplishments},
-	url = {https://www.nasa.gov/mission\_pages/hubble/main/accomplishments\_index.html},
-	note = {[online]. 2015 [cit. 2015-04-03]}
-}
-
-@article{LymanSpitzer1990131,
-	title = "Report to project rand: Astronomical advantages of an extra-terrestrial observatory ",
-	journal = "Astronomy Quarterly ",
-	volume = "7",
-	number = "3",
-	pages = "131 - 142",
-	year = "1990",
-	note = "",
-	issn = "0364-9229",
-	doi = "http://dx.doi.org/10.1016/0364-9229(90)90018-V",
-	url = "http://www.sciencedirect.com/science/article/pii/036492299090018V",
-	author = "Jr. Lyman Spitzer"
+@Article{nasaFAQ,
+        journal = {NASA, Frequetly Asked Questions about Webb},
+        url = {http://jwst.nasa.gov/faq.html},
+        note = {[online]. 2015 [cit. 2015-04-04]}
 }
 
 
@@ -128,4 +134,4 @@ author = {Tomáš FÁBRY},
 title = {Sazba sekvenčních diagramů v prostředí LaTeX},
 school = {Brno: Masarykova univerzita. Fakulta informatiky},
 year = {2011}
-}
+	}
