--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -1,8 +1,54 @@
 @Article{wikipediaHubble,
-	journal = {Wikipedia: Hubbleův vesmírný dalekohled},
+	journal = {Hubbleův vesmírný dalekohled},
 	url = {http://cs.wikipedia.org/wiki/Hubble\%C5\%AFv\_vesm\%C3\%ADrn\%C3\%BD\_dalekohled},
 	note = {[online]. 2015 [cit. 2015-04-02]}
 }
+
+@Article{nasaHubbleChronology,
+	journal = {A Chronology of the Hubble Space Telescope},
+	url = {http://history.nasa.gov/hubble/chron.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+@Article{cbsHubbleFinalService,
+	author = {William HARWOOD},
+	journal = {Four years after final service call, Hubble Space Telescope going strong},
+	url = {http://www.cbsnews.com/network/news/space/home/spacenews/files/1ae7cac0d167055e41e1f0da7b0ac6a3-588.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+@Article{hubbleSiteServicingMissions,
+	journal = {Servicing Missions},
+	url = {http://hubblesite.org/the\_telescope/team\_hubble/servicing\_missions.php},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+@Article{hubbleUntil2018,
+	journal = {Hubble Space Telescope Could Last Until 2018, NASA Says},
+	url = {http://www.space.com/19189-hubble-space-telescope-lifetime-2018.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+@Article{nasaHubbleAccomplishments,
+	journal = {Hubble Accomplishments},
+	url = {https://www.nasa.gov/mission\_pages/hubble/main/accomplishments\_index.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+@article{LymanSpitzer1990131,
+	title = "Report to project rand: Astronomical advantages of an extra-terrestrial observatory ",
+	journal = "Astronomy Quarterly ",
+	volume = "7",
+	number = "3",
+	pages = "131 - 142",
+	year = "1990",
+	note = "",
+	issn = "0364-9229",
+	doi = "http://dx.doi.org/10.1016/0364-9229(90)90018-V",
+	url = "http://www.sciencedirect.com/science/article/pii/036492299090018V",
+	author = "Jr. Lyman Spitzer"
+}
+
 
 @Article{wikipediaWebbEn,
         journal = {Wikipedia: James Webb Space Telescope},
@@ -34,19 +80,6 @@
         journal = {ABC: Vesmírný náhradník - Kosmický dalekohled Jamese Webba},
         url = {http://www.abicko.cz/precti-si-technika/13914/vesmirny-nahradnik-kosmicky-dalekohled-jamese-webba.html},
         note = {[online]. 2013-03-26 [cit. 2015-04-06]}
-}
-
-@Article{nasaHubbleChronology,
-	journal = {A Chronology of the Hubble Space Telescope},
-	url = {http://history.nasa.gov/hubble/chron.html},
-	note = {[online]. 2015 [cit. 2015-04-03]}
-}
-
-@Article{cbsHubbleFinalService,
-	author = {William HARWOOD},
-	journal = {Four years after final service call, Hubble Space Telescope going strong},
-	url = {http://www.cbsnews.com/network/news/space/home/spacenews/files/1ae7cac0d167055e41e1f0da7b0ac6a3-588.html},
-	note = {[online]. 2015 [cit. 2015-04-03]}
 }
 
 @Article{nasaFAQ,
