--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -179,10 +179,25 @@ V roce 2007 byl model teleskopu v životní velikosti vystaven ve Washingtonu D.
 \end{center}
 \end{figure}
 
-\subsection{Srovnání s Hubbleovým teleskopem}
-obrázky hubble vs přepoklad webb
-\section{Závěr}
+\section{Srovnání Hubbleova teleskopu s Teleskopem Jamese Webba}
+Velmi krátce zde na názorných obrázcích představíme rozdíly mezi Hubbleovým teleskopem a Teleskopem Jamese Webba.
 
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=8cm]{mirrors.eps}
+\caption{Názorné srovnání velikosti primárního zrcadla obou teleskopů}
+\end{center}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=8cm]{compare.jpg}
+\caption{Srovnání obrazu z Hubbleova teleskopu (viditelné spektrum) a odhadovaného obrazu z JWST (infračervené spektrum)}
+\end{center}
+\end{figure}
+
+\section{Závěr}
+V této práci jsme představili dva teleskopy. Aktuálně využívaný Hubbleův teleskop a jeho nástupce, který je právě budován, Vesmírný teleskop Jamese Webba. Snažili jsme se u každého teleskopu popsat jeho historii, strukturu a optický systém. V poslední kapitole jsme uvedli viditelné rozdíly mezi oběma teleskopy.
 \newpage
 
 \bibliographystyle{czechiso}
