--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -156,7 +156,7 @@ Po vypuštění JWST budeme muset na první snímky nejakou dobu počkat. Nejprv
 Pro připojení jednotlivých zrcadel k hlavní nosné konstrukci teleskopu jsou použity pružné tvarovky – Flextures. Fungují jako pružiny. Flextures dovolují rozpínání a smršťování celé soustavy zrcadel, ke kterému dochází změnami teplot  už v rámci předletových kontrol zde na Zemi. Cílem je otestovat tvarovou stabilitu JWST před jeho velkým ochlazením, ke kterému dojde ve vesmíru a kde provozní teplota bude okolo 50 K (-223 $^\circ$C) \cite{osel}.
 
 \subsubsection{Umístění teleskopu}
-Narozdíl od svého předchůdce (Hubbleův teleskop) se JWST nebude pohybovat na nízké oběžné dráze, ale bude umístěn v Lagrangeově bodě L2 soustavy Země - Slunce, tedy asi 1,5 km od Země, na opačné straně než Slunce. Teleskop bude obíhat po eliptické dráze s poloměrem přibližně 800 000 km v okolí bodu L2. Tuto dráhu by měl být schopen zvládnout za půl roku.
+Narozdíl od svého předchůdce (Hubbleův teleskop) se JWST nebude pohybovat na nízké oběžné dráze, ale bude umístěn v Lagrangeově bodě L2 soustavy Země - Slunce, tedy asi 1,5 mil. km od Země, na opačné straně než Slunce. Teleskop bude obíhat po eliptické dráze s poloměrem přibližně 800 000 km v okolí bodu L2. Tuto dráhu by měl být schopen zvládnout za půl roku.
 
 Lagrangeův bod je v nebeské mechanice takový bod v soustavě dvou těles \begin{math}m_1\end{math} a \begin{math}m_2\end{math} rotujících kolem společného těžiště, v němž se vyrovnávají gravitační a odstředivé síly soustavy tak, že malé těleso umístěné do tohoto bodu nemění vůči soustavě svou polohu. Všechny Lagrangeovy body se nacházení v rovině rotace těchto těles a je jich celkem pět. Označují se L1 až L5. Vlastnosti Lagrangeových bodů popsal v roce 1772 francouzský matematik a fyzik Joseph Louis Lagrange \cite{lagrange}.
 \begin{figure}[h]
@@ -191,7 +191,7 @@ Velmi krátce zde na názorných obrázcích představíme rozdíly mezi Hubbleo
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=8cm]{compare.jpg}
+\includegraphics[width=8cm]{compare.eps}
 \caption{Srovnání obrazu z Hubbleova teleskopu (viditelné spektrum) a odhadovaného obrazu z JWST (infračervené spektrum)}
 \end{center}
 \end{figure}
