Comprare.eps na compare.jpg

--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -200,7 +200,7 @@ Velmi krátce zde na názorných obrázcích představíme rozdíly mezi Hubbleo
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=8cm]{compare.eps}
+\includegraphics[width=8cm]{compare.jpg}
 \caption{Srovnání obrazu z Hubbleova teleskopu (viditelné spektrum) a odhadovaného obrazu z JWST (infračervené spektrum)}
 \end{center}
 \end{figure}
