Dopsán HST, opravena gramatika

--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -49,6 +49,65 @@
 	author = "Jr. Lyman Spitzer"
 }
 
+@Article{hubblesiteFacts,
+	journal = {Hubble Essentials: Quick Facts},
+	url = {http://hubblesite.org/the\_telescope/hubble\_essentials/quick\_facts.php},
+	note = {[online]. 2015 [cit. 2015-04-09]}
+}
+
+@Article{hubblesiteSpacecraftSystems,
+	journal = {Spacecraft systems},
+	url = {http://hubblesite.org/the\_telescope/nuts\_.and.\_bolts/spacecraft\_systems/},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}
+
+@Article{ballWfc3,
+	journal = {Wide Field Camera 3 (WFC3)},
+	url = {http://www.ballaerospace.com/page.jsp?page=174},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}
+
+@Article{hubblesiteFgs,
+	journal = {Fine Guidance Sensors},
+	url = {http://hubblesite.org/the\_telescope/nuts\_.and.\_bolts/instruments/fgs/},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}
+
+@Article{hubblesiteCos,
+	journal = {Cosmic Origins Spectrograph},
+	url = {http://hubblesite.org/the\_telescope/nuts\_.and.\_bolts/instruments/cos/},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}
+
+@Article{stsciDetectors,
+	journal = {ACS Detectors},
+	url = {http://www.stsci.edu/hst/acs/Detector/},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}
+
+@Article{hubblesiteStis,
+	journal = {Space TelescopeImaging Spectrograph},
+	url = {http://hubblesite.org/the\_telescope/nuts\_.and.\_bolts/instruments/stis/},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}
+
+@Article{stsciStisDetectors},
+	journal = {STIS Instrument Detectors},
+	url = {www.stsci.edu/hst/stis/design/detectors/},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}
+
+@Article{stsciNicmosDetectors,
+	journal = {NICMOS Detectors},
+	url = {http://www.stsci.edu/hst/nicmos/design/detectors},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}	
+
+@Article{stsciNicmosPerformance,
+	journal = {NICMOS Performance},
+	url = {http://www.stsci.edu/hst/nicmos/performance},
+	note = {[online]. 2015 [cit. 2015-04-10]}
+}	
 
 @Article{wikipediaWebbEn,
         journal = {Wikipedia: James Webb Space Telescope},
