--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -119,7 +119,7 @@ Za primárním zrcadlem už se nachází snímací zařízení. Tato jsou rozdě
 	\item Axiální - Cosmic Origins Spectrograph, Advanced Camera for Surveys, Space Telescope Imaging Spectrograph a Near Infrared Camera and Multi-Object Spectrometer.
 \end{itemize}
 
-Snímací nástroje a SSMES jsou umístěny ve válcovém hliníkovém obalu. Zbytek teleskopu je obalen do Multi-Layered Insulation, tedy vícevrtstvé izolace tvořené z teflonu pokrytého hliníkem.
+Snímací nástroje a SSMES jsou umístěny ve válcovém hliníkovém obalu. Zbytek teleskopu je obalen do Multi-Layered Insulation, tedy vícevrstvé izolace tvořené z teflonu pokrytého hliníkem.
 
 \subsection{Vybavení}
 Již víme, že na HST se nachází hned několik zařízení pro snímání přicházejícího světla. Tato zařízení jsou následující:
@@ -176,8 +176,8 @@ Aby do snímacích zařízení nevstupovalo nežádoucí záření, tak je objek
 Druhým teleskopem, který v~tomto projektu představíme, je vesmírný teleskop Jamese Webba. Vesmírný teleskop Jamese Webba (anglicky James Webb Space Telescope, dále v textu jen JWST) je plánovaná vesmírná observatoř, která by měla být vypuštěna v~říjnu 2018. JWST by měl nahradit dosluhující Hubbleův teleskop. V jednotlivých podkapitolách budeme postupně rozebírat jeho zvláštnosti a~parametry. V první řadě se ale zaměříme na jeho historii a~pojmenování.
 
 \subsection{Představení teleskopu} 
-JWST je plánovaná velká vesmírná observatoř optimalizovaná pro příjem infračerveného vlnového záření, pomocí kterého budou doplněny a~prohloubeny obejvy, které byly uskutečněny Hubbleovým teleskopem.
-Díky větší vlnové délce bude JWST schopen pozorovat formování prvních galaxií při utváření vesmíru a dále bude schopen pozorovat formování galaxií, které jsou ukryré za mračny vesmírného prachu.
+JWST je plánovaná velká vesmírná observatoř optimalizovaná pro příjem infračerveného vlnového záření, pomocí kterého budou doplněny a~prohloubeny objevy, které byly uskutečněny Hubbleovým teleskopem.
+Díky větší vlnové délce bude JWST schopen pozorovat formování prvních galaxií při utváření vesmíru a dále bude schopen pozorovat formování galaxií, které jsou ukryté za mračny vesmírného prachu.
 
 Původní název JSWT byl Vesmírný teleskop nové generace (anglicky Next Generation Space Telescope, zkráceně NGST). Přívlastek "nové generace" získal proto, že JWST bude stavět a pokračovat ve vědním průzku\-mu, který započal Hubbleův vesmírný teleskop. Objevy, které byly učiněny Hubbleovým teleskopem, ale i ostatními teleskopy, zapříčinily revoluci v astronomii a vyvstaly nové otázky, na jejichž zodpovězení bylo zapotřebí nových, odlišných a výkonnějších teleskopů. 
 JWST je také teleskopem nové generace i~po stránce technologické a~to díky použití nových technologií jako například odlehčeného, rozvinovacího primárního zrcadla, které bude určovat technologický směr pro budoucí mise.
