Opravy v textu, pridani obrazku

--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -91,7 +91,7 @@
 	note = {[online]. 2015 [cit. 2015-04-10]}
 }
 
-@Article{stsciStisDetectors},
+@Article{stsciStisDetectors,
 	journal = {STIS Instrument Detectors},
 	url = {www.stsci.edu/hst/stis/design/detectors/},
 	note = {[online]. 2015 [cit. 2015-04-10]}
@@ -137,7 +137,7 @@
 @Article{abcko,
         author = {Petr Kubala},
         journal = {ABC: Vesmírný náhradník - Kosmický dalekohled Jamese Webba},
-        url = {http://www.abicko.cz/precti-si-technika/13914/vesmirny-nahradnik-kosmicky-dalekohled-jamese-webba.html},
+        url = {http://www.abicko.cz/precti-si-technika/13914/vesmirny\\-nahradnik-kosmicky-dalekohled-jamese-webba.html},
         note = {[online]. 2013-03-26 [cit. 2015-04-06]}
 }
 
